[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/NicoClean-Monospaced.otf" type="DynamicFontData" id=1]
[ext_resource path="res://GameSystems/Diologe.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="Diologe" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 136.0
margin_right = 888.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 128.0
margin_right = 136.0
margin_bottom = 200.0

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 128.0
margin_top = 192.0
margin_right = 896.0
margin_bottom = 200.0

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 888.0
margin_right = 896.0
margin_bottom = 200.0

[node name="TextBox" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 152.0
margin_top = 38.0
margin_right = 872.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Dialoge"
valign = 1
autowrap = true

[node name="Name" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 152.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Name"
valign = 1

[node name="PushZ" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 712.0
margin_top = 160.0
margin_right = 880.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
text = "Push Z"
valign = 1
